force-app/RecordActions/default/objects/sflib_RecordAction__c/sflib_RecordAction__c.object-meta.xml
<CustomObject>
    <description>Holds the record actions, offered by the SFLib Record Action feature</description>
    <label>Record Action</label>
    <nameField>
        <label>Record Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>