force-app/RecordActions/default/objects/sflib_RecordAction__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <description>The API name of the screen flow which will be run when the call-to-action button is clicked</description>
    <inlineHelpText>The API name of the screen flow</inlineHelpText>
    <label>Screen Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>