force-app/RecordActions/default/objects/sflib_RecordAction__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <inlineHelpText>e.g. &quot;1 AND 2 OR 3&quot;</inlineHelpText>
    <label>Formula</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>