force-app/RecordActions/default/objects/sflib_RecordAction__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <inlineHelpText>The name of the Icon to show, leave this blank if you do not want to have an icon</inlineHelpText>
    <label>Icon</label>
    <length>64</length>
    <type>Text</type>
</CustomField>