force-app/RecordActions/default/objects/sflib_RecordAction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>The actions will show in ascending order</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>