force-app/RecordActions/default/objects/sflib_RecordAction__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>The API name of the record SObjectType for which this action should be available</description>
    <inlineHelpText>The API name of the object for which this action should be available</inlineHelpText>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>